--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -835,8 +835,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_b36rorji5844tn04iuq6(i, j, css_id) {
-          var table = document.getElementById("tinytable_b36rorji5844tn04iuq6");
+      function styleCell_p242osj6frlv52mxxgid(i, j, css_id) {
+          var table = document.getElementById("tinytable_p242osj6frlv52mxxgid");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -845,8 +845,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_b36rorji5844tn04iuq6(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_b36rorji5844tn04iuq6");
+      function spanCell_p242osj6frlv52mxxgid(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_p242osj6frlv52mxxgid");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -877,20 +877,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_2rsw8ilx7kscxmtkqcgt',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_kie57n2qujq4y3jd4fsx',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_ejgdo83mmyv0h9im0i0x',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_3vtfokb42oe7jn0xvwcy',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_06c77zztyohmhtsa0kjy',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_kww4q8a3mlcegvauhk8u',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_ug9s8y63z55l2vq4emvb',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_q9cmbviejzoed17us5c4',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_2xln6sg17uymlc3cy0e8',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_b1fk9p5lep55odo7596v',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_9rzs7i8tnfnm64nl8dr3',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_cn1wzkd7oxcrxotfroyn',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_wgn2w3ruy3zolq0go99s',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_5ti6c4vo7m5t72leuc0s',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_hfy4j8tj9szjje1exzr5',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_k0j2hz5h535k10ao39b8',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_b36rorji5844tn04iuq6(cell.i, cell.j, group.css_id);
+                  styleCell_p242osj6frlv52mxxgid(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -898,17 +898,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_2rsw8ilx7kscxmtkqcgt, .table th.tinytable_css_2rsw8ilx7kscxmtkqcgt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_kie57n2qujq4y3jd4fsx, .table th.tinytable_css_kie57n2qujq4y3jd4fsx { text-align: center; }
-      .table td.tinytable_css_ejgdo83mmyv0h9im0i0x, .table th.tinytable_css_ejgdo83mmyv0h9im0i0x { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_3vtfokb42oe7jn0xvwcy, .table th.tinytable_css_3vtfokb42oe7jn0xvwcy { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_06c77zztyohmhtsa0kjy, .table th.tinytable_css_06c77zztyohmhtsa0kjy { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_kww4q8a3mlcegvauhk8u, .table th.tinytable_css_kww4q8a3mlcegvauhk8u { text-align: left; }
-      .table td.tinytable_css_ug9s8y63z55l2vq4emvb, .table th.tinytable_css_ug9s8y63z55l2vq4emvb { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_q9cmbviejzoed17us5c4, .table th.tinytable_css_q9cmbviejzoed17us5c4 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_2xln6sg17uymlc3cy0e8, .table th.tinytable_css_2xln6sg17uymlc3cy0e8 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_b1fk9p5lep55odo7596v, .table th.tinytable_css_b1fk9p5lep55odo7596v { text-align: center; }
+      .table td.tinytable_css_9rzs7i8tnfnm64nl8dr3, .table th.tinytable_css_9rzs7i8tnfnm64nl8dr3 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_cn1wzkd7oxcrxotfroyn, .table th.tinytable_css_cn1wzkd7oxcrxotfroyn { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_wgn2w3ruy3zolq0go99s, .table th.tinytable_css_wgn2w3ruy3zolq0go99s { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_5ti6c4vo7m5t72leuc0s, .table th.tinytable_css_5ti6c4vo7m5t72leuc0s { text-align: left; }
+      .table td.tinytable_css_hfy4j8tj9szjje1exzr5, .table th.tinytable_css_hfy4j8tj9szjje1exzr5 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_k0j2hz5h535k10ao39b8, .table th.tinytable_css_k0j2hz5h535k10ao39b8 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_b36rorji5844tn04iuq6" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_p242osj6frlv52mxxgid" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -1012,8 +1012,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_tzvtdt1jmn90rzq1aij6(i, j, css_id) {
-          var table = document.getElementById("tinytable_tzvtdt1jmn90rzq1aij6");
+      function styleCell_qr6znooeqpw18i7l2rpo(i, j, css_id) {
+          var table = document.getElementById("tinytable_qr6znooeqpw18i7l2rpo");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1022,8 +1022,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_tzvtdt1jmn90rzq1aij6(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_tzvtdt1jmn90rzq1aij6");
+      function spanCell_qr6znooeqpw18i7l2rpo(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_qr6znooeqpw18i7l2rpo");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1054,20 +1054,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_vfag8oz02ct26q7cijlv',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_6wraqtump5zy3m78xdny',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_xoqbjnkwmhz6eah7ktx6',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_4dnd2drtzhd2w5n7htdc',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_sgsh7samni0g1q1fa2s6',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_deoyfnl3x4hfdd0u7i1h',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_81jlhabx8p880xwimpwa',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_mr51dfv4ejmw7ghkmomr',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_7vwfmmq6ob1aw9zk6icv',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_c4jllbzvaidpix7mczdr',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_6b839mzhmol2k832dkcy',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_gw7gspvt8u19pepihba5',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_s2i5ii16zu3rbgqi0meh',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_8i59avleh1au51x624ml',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_yl39um5x7css6b7k8dio',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_7wppyg481vgpzir07uzg',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_tzvtdt1jmn90rzq1aij6(cell.i, cell.j, group.css_id);
+                  styleCell_qr6znooeqpw18i7l2rpo(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1075,17 +1075,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_vfag8oz02ct26q7cijlv, .table th.tinytable_css_vfag8oz02ct26q7cijlv { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_6wraqtump5zy3m78xdny, .table th.tinytable_css_6wraqtump5zy3m78xdny { text-align: center; }
-      .table td.tinytable_css_xoqbjnkwmhz6eah7ktx6, .table th.tinytable_css_xoqbjnkwmhz6eah7ktx6 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_4dnd2drtzhd2w5n7htdc, .table th.tinytable_css_4dnd2drtzhd2w5n7htdc { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_sgsh7samni0g1q1fa2s6, .table th.tinytable_css_sgsh7samni0g1q1fa2s6 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_deoyfnl3x4hfdd0u7i1h, .table th.tinytable_css_deoyfnl3x4hfdd0u7i1h { text-align: left; }
-      .table td.tinytable_css_81jlhabx8p880xwimpwa, .table th.tinytable_css_81jlhabx8p880xwimpwa { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_mr51dfv4ejmw7ghkmomr, .table th.tinytable_css_mr51dfv4ejmw7ghkmomr { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_7vwfmmq6ob1aw9zk6icv, .table th.tinytable_css_7vwfmmq6ob1aw9zk6icv { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_c4jllbzvaidpix7mczdr, .table th.tinytable_css_c4jllbzvaidpix7mczdr { text-align: center; }
+      .table td.tinytable_css_6b839mzhmol2k832dkcy, .table th.tinytable_css_6b839mzhmol2k832dkcy { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_gw7gspvt8u19pepihba5, .table th.tinytable_css_gw7gspvt8u19pepihba5 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_s2i5ii16zu3rbgqi0meh, .table th.tinytable_css_s2i5ii16zu3rbgqi0meh { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_8i59avleh1au51x624ml, .table th.tinytable_css_8i59avleh1au51x624ml { text-align: left; }
+      .table td.tinytable_css_yl39um5x7css6b7k8dio, .table th.tinytable_css_yl39um5x7css6b7k8dio { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_7wppyg481vgpzir07uzg, .table th.tinytable_css_7wppyg481vgpzir07uzg { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_tzvtdt1jmn90rzq1aij6" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_qr6znooeqpw18i7l2rpo" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -1171,7 +1171,7 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 <ol type="1">
 <li>Use the global data set.</li>
 <li>Estimate a model assessing the impact of per capita GDP and “Adjusted net enrolment rate, primary (% of primary school age children)” in 2000.</li>
-<li>Design a Table to report results in MS Word.</li>
+<li>Design a <code>modelsummary</code> Table and export it to MS Word.</li>
 <li>What is the probability to be a democracy evaluated at the mean for both independent variables?</li>
 <li>What is the difference in probability ceteris paribus for minimum and maximum per capita GDP?</li>
 <li>What happens if we replace net enrolment rate by life expectancy in the model?</li>
