--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -445,7 +445,7 @@ Figure&nbsp;2: Effect of Budget on Propensity to Go Out
 </div>
 <p>&nbsp;</p>
 <p>Whilst this visualises the influence of the budget on the latent variable, what we are aiming for is to make a prediction about the probability of you going out, or not.</p>
-<p>Now imagine, your budget is <span class="math inline">\(x_{1}\)</span>. The regression line depicts the propensity that we would expect to see, on average, for somebody with a budget of <span class="math inline">\(x_{1}\)</span>. But the crucial point is that not everybody is average. Some might have an essay deadline approaching which makes them even less likely to go out. Others might just have received their essay mark, and want to celebrate that they scored a first. In other words, there is variability around the regression line. And we assume that whilst this variability is random, it still follows a particular distribution. In the case of a probit, this is the normal distribution<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>. I have added these distributions to <a href="#fig-towcdf" class="quarto-xref">Figure&nbsp;<span>3</span></a>.</p>
+<p>Now imagine, your budget is <span class="math inline">\(x_{1}\)</span>. The regression line depicts the propensity that we would expect to see, on average, for somebody with a budget of <span class="math inline">\(x_{1}\)</span>. But the crucial point is that not everybody is average. Some might have an essay deadline approaching which makes them even less likely to go out. Others might just have received their essay mark, and want to celebrate that they scored a first. In other words, there is variability around the regression line. And we assume that whilst this variability is random, it still follows a particular distribution. In the case of a probit, this is the normal distribution<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>. I have added these distributions to <a href="#fig-towcdf" class="quarto-xref">Figure&nbsp;<span>3</span></a>. You need to imagine these distributions to come out of the screen in 3D and to stand perpendicularly to the line.</p>
 <p>&nbsp; &nbsp;</p>
 <div id="fig-towcdf" class="quarto-float quarto-figure quarto-figure-center anchored" data-fig-align="center">
 <figure class="quarto-float quarto-float-fig figure">
@@ -835,8 +835,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_p242osj6frlv52mxxgid(i, j, css_id) {
-          var table = document.getElementById("tinytable_p242osj6frlv52mxxgid");
+      function styleCell_h1bon6ed2xfv2wrtmcwy(i, j, css_id) {
+          var table = document.getElementById("tinytable_h1bon6ed2xfv2wrtmcwy");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -845,8 +845,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_p242osj6frlv52mxxgid(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_p242osj6frlv52mxxgid");
+      function spanCell_h1bon6ed2xfv2wrtmcwy(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_h1bon6ed2xfv2wrtmcwy");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -877,20 +877,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_2xln6sg17uymlc3cy0e8',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_b1fk9p5lep55odo7596v',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_9rzs7i8tnfnm64nl8dr3',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_cn1wzkd7oxcrxotfroyn',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_wgn2w3ruy3zolq0go99s',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_5ti6c4vo7m5t72leuc0s',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_hfy4j8tj9szjje1exzr5',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_k0j2hz5h535k10ao39b8',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_t7eg4bjpt8ujllph2xy9',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_hrrq7zlzgc081h53jeux',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_ncpjao5ckunqgnqmp48b',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_k8j80qe58ri0fmt7urf7',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_0x5t5gw9a7c7m9il3dxx',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_icmm0zveblrhxxk9calj',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_ims3vjrndc8jupv6m3fd',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_16at86o2rx8wdc420i1q',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_p242osj6frlv52mxxgid(cell.i, cell.j, group.css_id);
+                  styleCell_h1bon6ed2xfv2wrtmcwy(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -898,17 +898,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_2xln6sg17uymlc3cy0e8, .table th.tinytable_css_2xln6sg17uymlc3cy0e8 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_b1fk9p5lep55odo7596v, .table th.tinytable_css_b1fk9p5lep55odo7596v { text-align: center; }
-      .table td.tinytable_css_9rzs7i8tnfnm64nl8dr3, .table th.tinytable_css_9rzs7i8tnfnm64nl8dr3 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_cn1wzkd7oxcrxotfroyn, .table th.tinytable_css_cn1wzkd7oxcrxotfroyn { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_wgn2w3ruy3zolq0go99s, .table th.tinytable_css_wgn2w3ruy3zolq0go99s { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_5ti6c4vo7m5t72leuc0s, .table th.tinytable_css_5ti6c4vo7m5t72leuc0s { text-align: left; }
-      .table td.tinytable_css_hfy4j8tj9szjje1exzr5, .table th.tinytable_css_hfy4j8tj9szjje1exzr5 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_k0j2hz5h535k10ao39b8, .table th.tinytable_css_k0j2hz5h535k10ao39b8 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_t7eg4bjpt8ujllph2xy9, .table th.tinytable_css_t7eg4bjpt8ujllph2xy9 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_hrrq7zlzgc081h53jeux, .table th.tinytable_css_hrrq7zlzgc081h53jeux { text-align: center; }
+      .table td.tinytable_css_ncpjao5ckunqgnqmp48b, .table th.tinytable_css_ncpjao5ckunqgnqmp48b { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_k8j80qe58ri0fmt7urf7, .table th.tinytable_css_k8j80qe58ri0fmt7urf7 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_0x5t5gw9a7c7m9il3dxx, .table th.tinytable_css_0x5t5gw9a7c7m9il3dxx { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_icmm0zveblrhxxk9calj, .table th.tinytable_css_icmm0zveblrhxxk9calj { text-align: left; }
+      .table td.tinytable_css_ims3vjrndc8jupv6m3fd, .table th.tinytable_css_ims3vjrndc8jupv6m3fd { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_16at86o2rx8wdc420i1q, .table th.tinytable_css_16at86o2rx8wdc420i1q { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_p242osj6frlv52mxxgid" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_h1bon6ed2xfv2wrtmcwy" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -1012,8 +1012,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_qr6znooeqpw18i7l2rpo(i, j, css_id) {
-          var table = document.getElementById("tinytable_qr6znooeqpw18i7l2rpo");
+      function styleCell_q5yxash1t8postrf2b90(i, j, css_id) {
+          var table = document.getElementById("tinytable_q5yxash1t8postrf2b90");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1022,8 +1022,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_qr6znooeqpw18i7l2rpo(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_qr6znooeqpw18i7l2rpo");
+      function spanCell_q5yxash1t8postrf2b90(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_q5yxash1t8postrf2b90");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1054,20 +1054,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_7vwfmmq6ob1aw9zk6icv',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_c4jllbzvaidpix7mczdr',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_6b839mzhmol2k832dkcy',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_gw7gspvt8u19pepihba5',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_s2i5ii16zu3rbgqi0meh',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_8i59avleh1au51x624ml',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_yl39um5x7css6b7k8dio',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_7wppyg481vgpzir07uzg',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_ax62pr6rgwuk943n3fcn',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_ug3o6j1phgs6821tzd76',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_2ywe2orefusw1w8c087c',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_lc4ji9bsm98k82a9pb21',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_244bb1e6mxpgfu4530te',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_58gkdv5dvi7h78vl7lwr',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_wt06bk3n53owou1ni6n5',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_phgwq7glcjxrnnpitt28',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_qr6znooeqpw18i7l2rpo(cell.i, cell.j, group.css_id);
+                  styleCell_q5yxash1t8postrf2b90(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1075,17 +1075,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_7vwfmmq6ob1aw9zk6icv, .table th.tinytable_css_7vwfmmq6ob1aw9zk6icv { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_c4jllbzvaidpix7mczdr, .table th.tinytable_css_c4jllbzvaidpix7mczdr { text-align: center; }
-      .table td.tinytable_css_6b839mzhmol2k832dkcy, .table th.tinytable_css_6b839mzhmol2k832dkcy { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_gw7gspvt8u19pepihba5, .table th.tinytable_css_gw7gspvt8u19pepihba5 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_s2i5ii16zu3rbgqi0meh, .table th.tinytable_css_s2i5ii16zu3rbgqi0meh { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_8i59avleh1au51x624ml, .table th.tinytable_css_8i59avleh1au51x624ml { text-align: left; }
-      .table td.tinytable_css_yl39um5x7css6b7k8dio, .table th.tinytable_css_yl39um5x7css6b7k8dio { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_7wppyg481vgpzir07uzg, .table th.tinytable_css_7wppyg481vgpzir07uzg { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_ax62pr6rgwuk943n3fcn, .table th.tinytable_css_ax62pr6rgwuk943n3fcn { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_ug3o6j1phgs6821tzd76, .table th.tinytable_css_ug3o6j1phgs6821tzd76 { text-align: center; }
+      .table td.tinytable_css_2ywe2orefusw1w8c087c, .table th.tinytable_css_2ywe2orefusw1w8c087c { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_lc4ji9bsm98k82a9pb21, .table th.tinytable_css_lc4ji9bsm98k82a9pb21 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_244bb1e6mxpgfu4530te, .table th.tinytable_css_244bb1e6mxpgfu4530te { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_58gkdv5dvi7h78vl7lwr, .table th.tinytable_css_58gkdv5dvi7h78vl7lwr { text-align: left; }
+      .table td.tinytable_css_wt06bk3n53owou1ni6n5, .table th.tinytable_css_wt06bk3n53owou1ni6n5 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_phgwq7glcjxrnnpitt28, .table th.tinytable_css_phgwq7glcjxrnnpitt28 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_qr6znooeqpw18i7l2rpo" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_q5yxash1t8postrf2b90" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
